--- a/my-app/package.json
+++ b/my-app/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-router-dom": "^5.3.0",
     "uiw": "4.7.16"
   },
   "devDependencies": {
