--- a/my-app/package.json
+++ b/my-app/package.json
@@ -18,11 +18,12 @@
   "dependencies": {
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-pdf": "^5.5.0",
     "react-router-dom": "^5.3.0",
     "uiw": "4.7.16"
   },
   "devDependencies": {
-    "kkt": "6.11.0"
+    "kkt": "^6.0.0"
   },
   "browserslist": {
     "production": [
